--- a/vercel.json
+++ b/vercel.json
@@ -5,15 +5,18 @@
         "src": "app.py",
         "use": "@vercel/python",
         "config": {
-            "installCommand": "pip install -r requirements.txt"
-          }
+          "installCommand": "pip install -r requirements.txt"
+        }
       }
     ],
     "routes": [
-      
+      {
+        "src": "/(.*)",
+        "dest": "app.py"
+      }
     ],
     "env": {
-     
+      "PORT": "5005"
     }
   }
   
