--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
         "src": "app.py",
         "use": "@vercel/python",
         "config": {
-          "installCommand": "pip install -r requirements.txt"
+        "runtime": "python3.10",
+        "installCommand": "pip install --upgrade pip==24.0 && pip install -r requirements.txt"
         }
       }
     ],
